--- a/web/Search.html
+++ b/web/Search.html
@@ -280,6 +280,11 @@ i
 	cursor: pointer;
 }
 
+.buttontwo {
+	color: white;
+	background-color: blue;
+}
+
 .citationButton:hover {
 	transition: all 0.4s ease;
 	background-color: black;
@@ -467,7 +472,7 @@ function ApplyFilterOptions()
 			{
 				inner+="<img src='/volltext.png' alt='volltext' title='Buch besitzt Volltext'><img src='/scan.png' alt='scan' title='Buch besitzt einen Scan'>";
 			}
-			inner+=jsonObj.books[i].description+"   "+"<input onclick='this.was_clicked=1;return true;' type='checkbox' unchecked></a>"; 
+			inner+=jsonObj.books[i].description+"   "+"<input onclick='this.was_clicked=1;return true;' class='booklistinp' data-scanid='"+jsonObj.books[i].scanId+"' type='checkbox' unchecked></a>"; 
 			newList.innerHTML = inner;
 			//Show the new link in the search hit list
 			obj.appendChild(newList);
@@ -607,63 +612,38 @@ function sendToPage(name)
 			return;
 		}
 
-		if(jsonObj.books.length===0)
-			StateBanner.ChangeBanner("No results found!",StateBannerType.info);
-		else
-			StateBanner.ChangeBanner("",StateBannerType.release);
 
-		let maxSearchResults = 25;
-		if(jsonObj.books.length < 25)
-		{
-			maxSearchResults = jsonObj.books.length;
-		}
+			document.getElementById("ResultBanner").innerHTML = "<h1 class='headerStyle'>Search Results for: \""+document.getElementById("SpecialSID").value+"\"<a class='citationButton' onclick='OpenFilter();return true;'>Filter results</a><a class='buttontwo citationButton' style='margin-left: 1rem' onclick='CreateBibliography();return true;'>Create Bibliography</a></h1>";
 
-		document.getElementById("ResultBanner").innerHTML = "<h1 class='headerStyle'>Search Results for: \""+document.getElementById("SpecialSID").value+"\"<a class='citationButton' onclick='OpenFilter();return true;'>Filter results</a></h1>";
-		//Iterate over every book and create based on the json the links to the books
-
-		for(var i = 0; i < jsonObj.books.length; i++)
-		{
-			let newList = document.createElement("li");
-			let inner = "";
-			if(!jsonObj.books[i].hasocr || (jsonObj.books[i].hasocr == undefined))
-			{
-
-				inner = "<a data-specialhref='/ShowMetadata";
-			}
-			else
-			{
-				inner = "<a data-specialhref='/GetBooks";
-			}
-			inner+= "?query="+input;
-			inner+="&scanId="+jsonObj.books[i].scanId;
-			inner+="&fuzzyness="+document.getElementById("FuzzyID").value; 
-			inner+="' onclick='return changeColor(this);'>";
-			if(!jsonObj.books[i].hasocr || (jsonObj.books[i].hasocr == undefined))
-			{
-				inner+="<img src='/volltext.png' class='hiddenContent' alt='volltext' title='Buch besitzt Volltext'><img src='/scan.png' class='hiddenContent' alt='scan' title='Buch besitzt einen Scan'>";
-			}
-			else
-			{
-				inner+="<img src='/volltext.png' alt='volltext' title='Buch besitzt Volltext'><img src='/scan.png' alt='scan' title='Buch besitzt einen Scan'>";
-			}
-			inner+="   "+jsonObj.books[i].description+"   "+"<input onclick='this.was_clicked=1;return true;' type='checkbox' unchecked></a>"; 
-			newList.innerHTML = inner;
-			//Show the new link in the search hit list
-			obj.appendChild(newList);
-		}
-		
-		
-		/*
-		let lList = document.getElementById("LinkList");
-		for(var i = 0; i < (jsonObj.books.length/25); i++)
-		{
-			lList.innerHTML += "<a href='www.google.de' class='linkedClass'>"+i+"</a>";
-		}*/
+		ApplyFilterOptions();
 	}
 	realSearch.send();
 	}
 	xhr.send();
 }
+
+function CreateBibliography()
+{
+	let lst = document.getElementsByClassName("booklistinp");
+	let biblst = "";
+	for(let i = 0; i < lst.length; i++)
+	{
+		if(lst[i].checked)
+		{
+			if(biblst=="")
+				biblst=lst[i].dataset.scanid;
+			else
+				biblst+=","+lst[i].dataset.scanid;
+		}
+	}
+	if(biblst.length==0)
+	{
+		alert("No books selected!");
+		return;
+	}
+	window.open("/createBibliography?books="+biblst);
+}
+
 
 function changeColor(obj)
 {
