--- a/web/ManageBooks.html
+++ b/web/ManageBooks.html
@@ -295,7 +295,7 @@ function ShowFile(x)
 	if(x.innerHTML.search(".jpg") === -1)
 	{
 	let xhr = new XMLHttpRequest();
-	xhr.open("GET","/getBookRessources?book="+x.dataset.key+"&ressource="+x.innerHTML,true);
+	xhr.open("GET","/getBookRessources?book="+x.dataset.key+"&ressource="+x.dataset.name,true);
 	xhr.onload = function() {
 		if(xhr.status!=200)
 			return;
@@ -319,7 +319,7 @@ function ShowFile(x)
 	}
 	else
 	{
-	 document.getElementById("frameNextTo").innerHTML = "<div class='fitIt'><img src='/getBookRessources?book="+x.dataset.key+"&ressource="+x.innerHTML+"' alt='description' class='fititImg'></img></div>";
+	 document.getElementById("frameNextTo").innerHTML = "<div class='fitIt'><img src='/getBookRessources?book="+x.dataset.key+"&ressource="+x.dataset.name+"' alt='description' class='fititImg'></img></div>";
 	}
 	document.getElementById("frameNextTo").style.display = "inline-grid";
 }
@@ -355,9 +355,9 @@ function slideOut(i,lstEnt)
 
 		for(var x = 0; x < newArr.length; x++)
 		{
-			let f ="<li onclick='ShowFile(this);' data-key='"+allBooksJS[i].key+"'>";
+			let f ="<li onclick='ShowFile(this);' data-key='"+allBooksJS[i].key+"' data-name='"+newArr[x]+"'>";
 			f+=newArr[x];
-			f+="</li>";
+			f+="<a style='float:right;' href='/getBookRessources?book="+allBooksJS[i].key+"&ressource="+newArr[x]+"' download='"+newArr[x]+"'>Download</a></li>";
 			bkList.innerHTML+=f;
 		}
 		ShowCurrentPage(1);
@@ -586,7 +586,7 @@ window.addEventListener("load",User.initialise,false);
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 5vh;
+	height: 8vh;
     background-color: #333;
 }
 
@@ -609,7 +609,7 @@ window.addEventListener("load",User.initialise,false);
 
 .grid-container {
 	position: fixed;
-	top: 5vh;
+	top: 8vh;
 	left: 0;
 	background-color: white;
 	width: 100%;
