--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -759,7 +759,7 @@ window.addEventListener("load", init, false);
 		</div>
 
 	<div id="olol" class="SpecialOCR">
-		<div id="OCRBuffer" class="ocrdispstyle"></div>
+		<div id="OCRBuffer" class="ocrdispstyle"><p>Loading...</p></div>
 	</div>
 	<div class="reader" tabindex="0">
 	</div>
